added initial item-similarity sections. need to finish data representation

--- a/config/config.tex
+++ b/config/config.tex
@@ -3,8 +3,8 @@
 \usepackage[parfill]{parskip}
 \usepackage[top=1in, bottom=1in, left=1.5in, right=1in]{geometry}
 \usepackage{array}
+\usepackage{changepage}
 \usepackage{colortbl}
-\usepackage{dirtytalk}
 \usepackage{fancyhdr}
 \usepackage{float}
 \usepackage{fontspec}
@@ -23,6 +23,7 @@
 \usepackage{titling}
 \usepackage{underscore}
 \usepackage{upquote}
+\usepackage{url}
 
 % settings
 \title{A Multi-Purpose Recommender Framework}
