--- a/sections/introduction.tex
+++ b/sections/introduction.tex
@@ -33,7 +33,7 @@ In the course of research in this field different techniques to compute recommen
 
 \begin{figure}[ht]
     \includegraphics[width=0.7\textwidth,center]{intro/background/collaborative.pdf}
-    \caption{Collaborative Filtering Diagram}
+    \caption{Collaborative Filtering (Diagram)}
     \label{fig:intro-techniques-collaborative}
 \end{figure}
 
@@ -47,7 +47,7 @@ Figure \ref{fig:intro-techniques-collaborative} illustrates a scenario where a c
 
 \begin{figure}[ht]
     \includegraphics[width=0.7\textwidth,center]{intro/background/contentbased.pdf}
-    \caption{Content-Based Filtering Diagram}
+    \caption{Content-Based Filtering (Diagram)}
     \label{fig:intro-techniques-contentbased}
 \end{figure}
 
